[package]
name = "functionate"
version = "0.1.0"
authors = ["Nikodem Rabuliński <nikodemrabulinski@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Automatically implement Fn* traits for structs and enums"
keywords = ["macro", "unstable", "function", "metaprogramming", "meta"]
repository = "https://github.com/nrabulinski/functionate/"
readme = "README.md"
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"